test/asm/invalid-jr.err
error: invalid-jr.asm(3):
    JR target must be between -128 and 127 bytes away, not -258; use JP instead
Assembly aborted with 1 error!
